front page additions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,13 @@ body {
     background-color: gray;
 }
 
-h2 {
+#options {
     background-color: gray;
+}
+#inputs {
+    background-color:greenyellow;
+}
+
+footer {
+    text-align: center;
 }
