--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 body {
     background-color: lightgray;
 }
@@ -17,7 +17,4 @@ body {
 
 footer {
     text-align: center;
-}
-=======
-/* css file */
->>>>>>> 6a65fb71202173ee304eb349374e84fbf5eddae6
+};
