--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,24 @@ body {
 
 #header {
     background-color: #a6728a;
-    font-family: Georgia;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.mode-card {
+  height: 300px;
+  width: 200px;
+  padding: 20px;
+  margin-top: 9px;
+  border-radius: 5px;
+  
+}
+.mode-card h3 {
+  text-align: center;
+  color: white;
 }
 .card {
-    width: 400px;
+    width: 445px;
 }
-.transport-card {
-    width: 400px;
-}
+
 #inputs {
     margin-top: 50px;
 }
@@ -47,7 +57,7 @@ i .large {
 }
 
 #mode {
-    background-color: #f2ebc9;
+    background-color: #a6728a;
 }
 #map{
     background-color: #55b3d9;
@@ -60,7 +70,7 @@ i .large {
 #weather2{
     background-color: #55b3d9;
 }
-code, h1, h2, h3{
+code, h1, h2, h3 {
     color: #124191;
     letter-spacing: -0.03em;
   }
@@ -228,6 +238,9 @@ code, h1, h2, h3{
 #directionsTable{
     background-color: #f2ebc9;
     padding: 25px;
+    width: 445px;
+    margin-left: 25px;
+    margin-top: 25px;
 }
 
 footer {
